[tool.poetry]
name = "progress-report"
version = "0.1.0"
description = ""
authors = ["takeshiho0531 <kawadatakeshiho@gmail.com>"]
readme = "README.md"
packages = [{include = "progress_report"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.93.0"
japanize-matplotlib = "^1.1.3"
matplotlib = "^3.7.1"
pandas = "^1.5.3"
seaborn = "^0.12.2"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
